--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div>
     <div class="col-lg-4 col-md-6 col-12 p-3">
       <div class="card">
-        <img src="images/1.JPG" class="card-img-top" alt="...">
+        <img src="images/1.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">AI PROMPT</h5>
           <p class="card-text">Create a 3D illustration featuring a realistic 38 year-old beautiful Young marketing engineer busy to writing a coding on a chair in front of a 3d logo of FACEBOOK.' The character should have blue and white pant coat tie ,with Sneakers shoes, with glasses,The background of the image should showcase a social media profile page and the username "Degital Marketing' and a matching profile picture and modify it</p>
